Update VoidCommand.java